--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -547,13 +547,17 @@ body {
 }
 
 .filter-list {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .filter-list-item:not(:last-child) {
   margin-right: 8px;
+}
+
+.filter-list-item:nth-child(-n + 3) {
+  margin-bottom: 15px;
 }
 
 .button-content {
@@ -578,6 +582,17 @@ body {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
+}
+
+@media screen and (min-width: 768px) {
+  .filter-list {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+  }
+  .filter-list-item:nth-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .footer {
