--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,10 +1,14 @@
 .filter-list {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
 
   &-item:not(:last-child) {
     margin-right: 8px;
+  }
+
+  &-item:nth-child(-n + 3) {
+    margin-bottom: 15px;
   }
 }
 
@@ -32,3 +36,50 @@
     transition-duration: 250ms;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .filter-list {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+
+    &-item:nth-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
+}
+
+// .filter-list {
+//   margin-bottom: 50px;
+//   display: flex;
+//   justify-content: center;
+
+//   &-item:not(:last-child) {
+//     margin-right: 8px;
+//   }
+// }
+
+// .button-content {
+//   padding: 6px 22px;
+//   background-color: $secondary-background-color;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.62;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   border-radius: 4px;
+//   border-color: transparent;
+//   transition-property: all;
+//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   transition-duration: 250ms;
+
+//   &:hover,
+//   &:focus {
+//     background: $accent-color;
+//     color: $white-text-color;
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+//     transition-property: all;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//     transition-duration: 250ms;
+//   }
+// }
