--- a/sass/layout/_portfolio-list.scss
+++ b/sass/layout/_portfolio-list.scss
@@ -106,6 +106,9 @@
   color: $white-text-color;
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+}
+
 // .portfolio-list {
 //   display: flex;
 //   flex-wrap: wrap;
