--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -82,7 +82,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
     width: 768px;
   }
@@ -232,8 +232,8 @@ body {
 
 .portfolio {
   text-align: center;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .portfolio-title {
@@ -584,7 +584,18 @@ body {
   transition-duration: 250ms;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .filter-list {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+  }
+  .filter-list-item:nth-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .filter-list {
     margin-bottom: 50px;
     display: flex;
@@ -941,19 +952,8 @@ body {
   color: #757575;
 }
 
-.portfolio-list-item {
-  display: block;
-  width: 370px;
-  margin-right: 30px;
+.portfolio-list-item:not(:last-child) {
   margin-bottom: 30px;
-}
-
-.portfolio-list-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.portfolio-list-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
 
 .card {
@@ -1022,5 +1022,21 @@ body {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .portfolio-list-item {
+    width: 354px;
+  }
+  .portfolio-list-item:nth-child(2n) {
+    margin-left: 30px;
+  }
+  .card-content {
+    height: 146px;
+  }
 }
 /*# sourceMappingURL=portfolio.css.map */
