--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -76,7 +76,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
     .clients & {
       padding-left: 15px;
