--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -37,7 +37,19 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .filter-list {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+
+    &-item:nth-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .filter-list {
     margin-bottom: 50px;
     display: flex;
