--- a/sass/layout/_portfolio-list.scss
+++ b/sass/layout/_portfolio-list.scss
@@ -21,19 +21,8 @@
     color: $primary-text-color;
   }
 
-  &-item {
-    display: block;
-    width: 370px;
-    margin-right: 30px;
+  &-item:not(:last-child) {
     margin-bottom: 30px;
-
-    &:nth-child(3n) {
-      margin-right: 0px;
-    }
-
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0px;
-    }
   }
 }
 
@@ -106,7 +95,23 @@
   color: $white-text-color;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+
+    &-item {
+      width: 354px;
+    }
+
+    &-item:nth-child(2n) {
+      margin-left: 30px;
+    }
+  }
+
+  .card-content {
+    height: 146px;
+  }
 }
 
 // .portfolio-list {
